# MyMLOps2025

./: .env.template  .gitignore  .pre-commit-config.yaml  CLAUDE-curr-status.md  CLAUDE.md  Dockerfile  Makefile  README.md  TODO.md  docker-compose.yml  justfile  pyproject.toml  simple_pipeline_test.py
.github/workflows/: ci.yml  model-retraining.yml
AI/: README.md  deployment-success-summary.md  final-test-report.md  implementation-log.md  pipeline-testing-analysis.md  pipeline-testing-final-report.md  pipeline_validator.py  project-plan.md  repo-creation-log.md  simple_syntax_test.py  syntax_checker.py  testing-debug-log.md
AI/20250817-docker-pipeline-optimization/: README.md  api-enhancement-research.md  comprehensive-analysis-report.md  docker-debugging-report.md  evaluate-script-development.md
docker/api/: Dockerfile
docker/dagster/: Dockerfile
docker/mlflow/: Dockerfile
docker/monitoring/: Dockerfile
docker/postgres/: init.sql
docs/: API.md
scripts/: download_data.py  process_data.py  simple_data_test.py  simple_ml_test.py
src/: __init__.py  dagster_app.py  evaluate.py  train.py
src/api/: main.py
src/dagster_app/: __init__.py  assets.py
src/data/: data_processor.py
src/models/: trainer.py
src/monitoring/: data_drift.py
tests/: conftest.py  test_api.py  test_dagster_assets.py  test_data_processor.py  test_model_trainer.py  test_monitoring.py  test_scripts.py
